data/derived/fa15/progs/unify/prog3532.ml.out
Characters 403-404:
  | Power(a, b) -> if(x < 1.0 && x > -1.0 || y < 1.0 && y > -1.0) then 0.5 else a ** b
                                                                                ^
Error: This expression has type expr but an expression was expected of type
         float
